Revert "Fixed #32069 - Admin form layout broken at narrower browser widths in 3.1.2"
This reverts commit 9f48096d

--- a/django/contrib/admin/static/admin/css/nav_sidebar.css
+++ b/django/contrib/admin/static/admin/css/nav_sidebar.css
@@ -107,7 +107,7 @@
     max-width: calc(100% - 299px);
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 767px) {
     #nav-sidebar, #toggle-nav-sidebar {
         display: none;
     }
